--- a/config/.env
+++ b/config/.env
@@ -1,6 +1,6 @@
-DATABASE_URL=
-PGDATABASE=todo
-PGHOST=localhost
-PGPASSWORD=postgres
-PGPORT=5432
+DATABASE_URL=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
+PGDATABASE=railway
+PGHOST=containers-us-west-178.railway.app
+PGPASSWORD=qAfOsTjWuD5cIWzdRZHD
+PGPORT=6911
 PGUSER=postgres
